レスポンシブ修正

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta chart="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>test</title>
     <style>
         body {
@@ -54,7 +55,6 @@
             width: 400px;
             margin: 0 auto;
             padding: 20px;
-
         }
 
         label{
@@ -84,7 +84,7 @@
         footer {
             background: #666;
             text-align: center;
-            margin-top: 32px;
+            margin-top: 64px;
             padding-top: 32px;
             color: #fff;
             height: 100vh;
@@ -104,6 +104,9 @@
             button{
                 margin-left: 0;
             }
+            nav ul{
+                flex-direction: column;
+            }
         }
     </style>
 </head>
@@ -114,7 +117,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">Service</a></li>
             <li><a href="">About</a></li>
-            <li><a href="" style="background: #666;">Contact Us</a></li>
+            <li><a href="">Contact Us</a></li>
         </ul>
     </nav>
     <header>
@@ -125,15 +128,15 @@
             <form method="post" action="confirm.php">
                 <div>
                     <label>氏名</label>
-                    <input type="text" class="form-item">
+                    <input type="text" name="name" class="form-item">
                 </div>
                 <div>
                     <label>Email</label>
-                    <input type="text" class="form-item">
+                    <input type="text" name="email" class="form-item">
                 </div>
                 <div>
                     <label>お問合せ内容</label>
-                    <textarea class="form-item"></textarea>
+                    <textarea name="message" class="form-item"></textarea>
                 </div>
                 <div>
                     <button type="submit" class="form-item">確認する</button>
