thankyouまでの基本フロー

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <header>
     </header>
     <main>
-        <h1>お問合せフォーム</h1>
+        <h1>お問合せフォーム（入力）</h1>
         <section class="form-container">
             <form method="post" action="confirm.php">
                 <div>
